...
                      ? userStore.customerProfilesDetails['avatar']
                      : 'https://gravatar.com/avatar/36769e13dec8dd6619228ab1113427f8?s=400&d=mp&r=x',
                ),
              ),
              ListTile(
                leading: const Icon(Icons.account_circle),
                title: const Text("My Profile"),
                trailing: const Icon(Icons.chevron_right),
                onTap: () {
                  if (userStore.isLogin) {
                    Get.toNamed(AppRoutes.myProfile);
                  } else {
                    EasyLoading.showInfo('Please log in first');
...
                  Icons.logout_outlined,
                  color: userStore.isLogin
                      ? Colors.red
                      : Colors.purple,
                ),
                title: Text(
                  userStore.isLogin ? "Logout" : "Login",
                  style: TextStyle(
                    color: userStore.isLogin
                        ? Colors.red
                        : Colors.purple,
                  ),
                ),
...
