...
           isDense: true,
           border: const OutlineInputBorder(
             borderRadius: BorderRadius.all(Radius.circular(30)),
           ),
           labelText: 'Type a message',
           suffixIcon: IconButton(
             key: ValueKey('sendButton'), // Add this line
             onPressed: controller.sendMessage,
             icon: const Icon(Icons.send),
           ),
         ),
       ),
     );
   }

  @override
  Widget build(BuildContext context) {
    return Scaffold(
      appBar: AppBar(title: const Text("Chat Page")),
      body: SafeArea(
        child: Column(
          children: [
            Expanded(child: _buildMessageList()),
            _buildInputBox(),
          ],
...
