...

  void showSuccessDialog(BuildContext context) {
    showDialog(
      context: context,
      builder: (BuildContext context) {
        return AlertDialog(
          title: const Text('registration success'),
          actions: <Widget>[
            TextButton(
              child: const Text('Return to login page'),
              onPressed: () {
                Get.close(4);
              },
            ),
          ],
        );
...
