...
                  },
                  style: ElevatedButton.styleFrom(
                    minimumSize: const Size(double.infinity, 50),
                    backgroundColor : const Color(0xFF00008B), // match_parent width
                  ),
                  child: const Text(
                      'Sign up',
                  style: TextStyle(
                    color: Colors.white,
                  ),
                  ),
                ),
              ],
...
