...
          onPressed: () =>
              Navigator.of(context).pop(false), // User presses "No"
          child: const Text('No'),
        ),
        TextButton(
          onPressed: () =>
              Navigator.of(context).pop(true), // User presses "Yes"
          child: const Text('Yes'),
        ),
      ],
    ),
  );

...
  Widget build(BuildContext context) {
    return Padding(
      padding: const EdgeInsets.symmetric(vertical: 10),
      child: Column(
        children: [
          ListTile(
            title: const Text('Manage account'),
            trailing: const Icon(Icons.arrow_forward_ios),
            onTap: () => _showDeleteAccountConfirmation(context),
          ),
          // ListTile(
          //   title: const Text('Notification preferences'),
          //   trailing: const Icon(Icons.arrow_forward_ios),
...
